--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,7 @@
   h2 {
     @apply text-xl;
   }
+
 }
 
 html, body {
@@ -22,5 +23,17 @@ html, body {
 }
 
 #map-container {
-  height: 100vh;
+  height: 65vh;
+}
+#control-container {
+  height: 35vh;
+  overflow: scroll;
+}
+@media (min-width: 768px) {
+  #map-container {
+    height: 100vh;
+  }
+  #control-container {
+    height: 100vh;
+  }
 }
